@@ -20,40 +20,40 @@ xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 </copyright>
-<escp2:model id="119">
- <media src="escp2/media/c120.xml"/>
- <inputSlots src="escp2/inputslots/wf7000.xml"/>
+<escp2:model id="121">
+ <media src="escp2/media/wf500.xml"/>
+ <inputSlots src="escp2/inputslots/default.xml"/>
  <qualityPresets src="escp2/qualitypresets/wf40.xml"/>
- <inkGroup src="escp2/inks/wf40.xml"/>
+ <inkGroup src="escp2/inks/sx445.xml"/>
  <mediaSizes src="escp2/mediasizes/standard.xml"/>
  <verticalBorderlessSequence>US\003\000\000\000\002</verticalBorderlessSequence>
  <preinitSequence>\000\000\000\033\001@EJL\0401284.4\012@EJL\040\040\040\040\040\012\033@</preinitSequence>
- <preinitRemoteSequence>SN\001\000\000</preinitRemoteSequence>
+ <preinitRemoteSequence>JS\014\000\000GUTENPRINT\000SN\001\000\000</preinitRemoteSequence>
  <postinitRemoteSequence>JE\001\000\000</postinitRemoteSequence>
  <commandSet>2000</commandSet>
- <borderless>Full</borderless>
+ <borderless>Yes</borderless>
  <supportsVariableDropsizes/>
  <hasFastGraymode/>
  <sendZeroAdvance/>
  <supportsD4Mode/>
  <preferredEnvelopeOrientation>Portrait</preferredEnvelopeOrientation>
  <headConfiguration type="default">
-  <Nozzles>128</Nozzles>
-  <MinNozzles>1</MinNozzles>
+  <Nozzles>42</Nozzles>
+  <MinNozzles>42</MinNozzles>
   <FirstNozzle>0</FirstNozzle>
   <NozzleSeparation>3</NozzleSeparation>
  </headConfiguration>
  <headConfiguration type="black">
-  <Nozzles>384</Nozzles>
-  <MinNozzles>1</MinNozzles>
+  <Nozzles>128</Nozzles>
+  <MinNozzles>128</MinNozzles>
   <FirstNozzle>0</FirstNozzle>
-  <NozzleSeparation>1</NozzleSeparation>
+  <NozzleSeparation>3</NozzleSeparation>
  </headConfiguration>
  <headConfiguration type="fast">
-  <Nozzles>384</Nozzles>
-  <MinNozzles>1</MinNozzles>
+  <Nozzles>128</Nozzles>
+  <MinNozzles>128</MinNozzles>
   <FirstNozzle>0</FirstNozzle>
-  <NozzleSeparation>1</NozzleSeparation>
+  <NozzleSeparation>3</NozzleSeparation>
  </headConfiguration>
  <physicalChannels>4</physicalChannels>
  <baseSeparation>360</baseSeparation>
@@ -63,150 +63,117 @@ xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.
  <extraVerticalFeed>10</extraVerticalFeed>
  <separationRows>1</separationRows>
  <zeroMarginOffset>80</zeroMarginOffset>
+ <initialVerticalOffset>-257</initialVerticalOffset>
  <microLeftMargin>42</microLeftMargin>
- <initialVerticalOffset>0</initialVerticalOffset>
  <minHorizontalAlignment>1</minHorizontalAlignment>
  <baseHorizontalAlignment>28800</baseHorizontalAlignment>
  <bidirectionalAutoUpperLimit>16588800</bidirectionalAutoUpperLimit>
  <minimumMediaSize>144 144</minimumMediaSize>
- <maximumMediaSize>926 86400</maximumMediaSize>
- <maximumImageableArea>936 86400</maximumImageableArea>
+ <maximumMediaSize>612 86400</maximumMediaSize>
+ <maximumImageableArea>612 86400</maximumImageableArea>
  <margins interleave="soft" media="sheet">9 9 0 9</margins>
  <margins interleave="printer" media="sheet">9 9 0 9</margins>
  <margins interleave="soft" media="roll">9 9 0 0</margins>
  <margins interleave="printer" media="roll">9 9 0 0</margins>
- <margins duplex="duplex">-32768 -32768 9 9</margins>
+ <extraBottom>24</extraBottom>
+ <CDOffset>204 191</CDOffset>
+ <CDMediaSize>595 842</CDMediaSize>
  <AlignmentChoices>4 15 0 0</AlignmentChoices>
  <ChannelNames>
-  <ChannelName translate="name" name="Black"/>
+  <ChannelName translate="name" name="Cyan"/>
   <ChannelName translate="name" name="Magenta"/>
   <ChannelName translate="name" name="Yellow"/>
-  <ChannelName translate="name" name="Cyan"/>
+  <ChannelName translate="name" name="Black"/>
  </ChannelNames>
  <resolutions>
   <resolution translate="text" name="360x120sw" text="360 x 120 DPI Economy">
    <physicalResolution>360 120</physicalResolution>
    <parameter type="float" name="escp2_density">4.000000</parameter>
-   <parameter type="integer" name="escp2_ink_type">17</parameter>
+   <parameter type="integer" name="escp2_ink_type">16</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.250000</parameter>
-   <parameter type="float" name="DropSize2">0.500000</parameter>
+   <parameter type="float" name="DropSize1">0.200000</parameter>
+   <parameter type="float" name="DropSize2">0.350000</parameter>
    <parameter type="float" name="DropSize3">1.000000</parameter>
   </resolution>
   <resolution translate="text" name="360sw" text="360 DPI">
    <physicalResolution>360 360</physicalResolution>
    <parameter type="float" name="escp2_density">2.000000</parameter>
-   <parameter type="integer" name="escp2_ink_type">17</parameter>
+   <parameter type="integer" name="escp2_ink_type">16</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.250000</parameter>
-   <parameter type="float" name="DropSize2">0.500000</parameter>
-   <parameter type="float" name="DropSize3">1.000000</parameter>
-  </resolution>
-  <resolution translate="text" name="360hq" text="360 DPI Enhanced">
-   <physicalResolution>360 360</physicalResolution>
-   <verticalPasses>2</verticalPasses>
-   <parameter type="float" name="escp2_density">2.000000</parameter>
-   <parameter type="integer" name="escp2_ink_type">17</parameter>
-   <parameter type="integer" name="escp2_base_res">360</parameter>
-   <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.250000</parameter>
-   <parameter type="float" name="DropSize2">0.500000</parameter>
+   <parameter type="float" name="DropSize1">0.200000</parameter>
+   <parameter type="float" name="DropSize2">0.350000</parameter>
    <parameter type="float" name="DropSize3">1.000000</parameter>
   </resolution>
   <resolution translate="text" name="720x360sw" text="720 x 360 DPI">
    <physicalResolution>720 360</physicalResolution>
    <parameter type="float" name="escp2_density">1.560000</parameter>
-   <parameter type="integer" name="escp2_ink_type">18</parameter>
+   <parameter type="integer" name="escp2_ink_type">17</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.220000</parameter>
-   <parameter type="float" name="DropSize2">0.320000</parameter>
-   <parameter type="float" name="DropSize3">1.000000</parameter>
-  </resolution>
-  <resolution translate="text" name="720x360hq" text="720 x 360 DPI Enhanced">
-   <physicalResolution>720 360</physicalResolution>
-   <verticalPasses>2</verticalPasses>
-   <parameter type="float" name="escp2_density">1.560000</parameter>
-   <parameter type="integer" name="escp2_ink_type">18</parameter>
-   <parameter type="integer" name="escp2_base_res">360</parameter>
-   <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.220000</parameter>
-   <parameter type="float" name="DropSize2">0.320000</parameter>
+   <parameter type="float" name="DropSize1">0.300000</parameter>
+   <parameter type="float" name="DropSize2">0.660000</parameter>
    <parameter type="float" name="DropSize3">1.000000</parameter>
   </resolution>
   <resolution translate="text" name="720sw" text="720 DPI">
    <physicalResolution>720 720</physicalResolution>
    <parameter type="float" name="escp2_density">0.780000</parameter>
-   <parameter type="integer" name="escp2_ink_type">18</parameter>
+   <parameter type="integer" name="escp2_ink_type">17</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.220000</parameter>
-   <parameter type="float" name="DropSize2">0.320000</parameter>
-   <parameter type="float" name="DropSize3">1.000000</parameter>
-  </resolution>
-  <resolution translate="text" name="720hq" text="720 DPI High Quality">
-   <physicalResolution>720 720</physicalResolution>
-   <verticalPasses>2</verticalPasses>
-   <parameter type="float" name="escp2_density">0.780000</parameter>
-   <parameter type="integer" name="escp2_ink_type">18</parameter>
-   <parameter type="integer" name="escp2_base_res">360</parameter>
-   <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.220000</parameter>
-   <parameter type="float" name="DropSize2">0.320000</parameter>
+   <parameter type="float" name="DropSize1">0.300000</parameter>
+   <parameter type="float" name="DropSize2">0.550000</parameter>
    <parameter type="float" name="DropSize3">1.000000</parameter>
   </resolution>
   <resolution translate="text" name="1440x720sw" text="1440 x 720 DPI">
    <physicalResolution>1440 720</physicalResolution>
-   <parameter type="float" name="escp2_density">0.768000</parameter>
-   <parameter type="integer" name="escp2_ink_type">19</parameter>
+   <parameter type="float" name="escp2_density">0.778000</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.250000</parameter>
+   <parameter type="float" name="DropSize1">0.380000</parameter>
    <parameter type="float" name="DropSize2">0.500000</parameter>
    <parameter type="float" name="DropSize3">1.000000</parameter>
   </resolution>
   <resolution translate="text" name="1440x1440ov" text="1440 x 1440 DPI">
    <physicalResolution>2880 1440</physicalResolution>
    <printedResolution>1440 1440</printedResolution>
-   <parameter type="float" name="escp2_density">0.384000</parameter>
-   <parameter type="integer" name="escp2_ink_type">19</parameter>
-   <parameter type="integer" name="escp2_base_res">360</parameter>
-   <parameter type="integer" name="escp2_bits">2</parameter>
-   <parameter type="float" name="DropSize1">0.250000</parameter>
-   <parameter type="float" name="DropSize2">0.500000</parameter>
-   <parameter type="float" name="DropSize3">1.000000</parameter>
-  </resolution>
-  <resolution translate="text" name="2880x1440sw" text="2880 x 1440 DPI">
-   <physicalResolution>2880 1440</physicalResolution>
-   <parameter type="float" name="escp2_density">0.384</parameter>
-   <parameter type="integer" name="escp2_ink_type">19</parameter>
+   <parameter type="float" name="escp2_density">0.512000</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
    <parameter type="float" name="DropSize1">0.500000</parameter>
    <parameter type="float" name="DropSize2">1.000000</parameter>
   </resolution>
+  <resolution translate="text" name="2880x1440sw" text="2880 x 1440 DPI">
+   <physicalResolution>2880 1440</physicalResolution>
+   <parameter type="float" name="escp2_density">0.512</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
+   <parameter type="integer" name="escp2_base_res">360</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">1.000000</parameter>
+  </resolution>
   <resolution translate="text" name="5760x1440sw" text="5760 x 1440 DPI">
    <physicalResolution>5760 1440</physicalResolution>
-   <parameter type="float" name="escp2_density">0.384000</parameter>
-   <parameter type="integer" name="escp2_ink_type">19</parameter>
+   <parameter type="float" name="escp2_density">0.256000</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
    <parameter type="float" name="DropSize1">1.000000</parameter>
   </resolution>
   <resolution translate="text" name="2880x2880sw" text="2880 x 2880 DPI">
    <physicalResolution>2880 2880</physicalResolution>
-   <parameter type="float" name="escp2_density">0.384000</parameter>
-   <parameter type="integer" name="escp2_ink_type">19</parameter>
+   <parameter type="float" name="escp2_density">0.256000</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
    <parameter type="float" name="DropSize1">1.000000</parameter>
   </resolution>
   <resolution translate="text" name="5760x2880sw" text="5760 x 2880 DPI">
    <physicalResolution>5760 2880</physicalResolution>
-   <parameter type="float" name="escp2_density">0.192000</parameter>
-   <parameter type="integer" name="escp2_ink_type">19</parameter>
+   <parameter type="float" name="escp2_density">0.128000</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
    <parameter type="integer" name="escp2_bits">2</parameter>
    <parameter type="float" name="DropSize1">1.000000</parameter>
