@@ -31,7 +31,7 @@ xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.
  <preinitRemoteSequence>SN\001\000\000</preinitRemoteSequence>
  <postinitRemoteSequence>JE\001\000\000</postinitRemoteSequence>
  <commandSet>2000</commandSet>
- <borderless>Yes</borderless>
+ <borderless>Full</borderless>
  <supportsVariableDropsizes/>
  <hasFastGraymode/>
  <sendZeroAdvance/>
