@@ -261,7 +261,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
        EPSON Stylus TX125
        EPSON Stylus C92
-       Epson Stylus D78
+       EPSON Stylus D78
+       EPSON Stylus SX445W
        EPSON WorkForce WF-7010 (EXPERIMENTAL)
        EPSON WorkForce WF-7011 (EXPERIMENTAL)
        EPSON WorkForce WF-7015 (EXPERIMENTAL)
